# mlsys

./: .gitignore  .gitmodules
cs231n/assignment1/: knn.ipynb  softmax.ipynb  svm.ipynb
cs231n/assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_classifier.py  linear_svm.py  softmax.py
cs231n/assignment2/: .gitignore  FullyConnectedNets.ipynb
cs231n/assignment2/.ipynb_checkpoints/: FullyConnectedNets-checkpoint.ipynb
cuda_learning/: .gitignore  CMakeLists.txt
cuda_learning/src/: main.cu
cuda_learning/src/kernel/: add.cu
cuda_learning/src/utils/: common.h  device.h
dlsyscourse/: .gitignore  README.md
dlsyscourse/hw0/: Note.md  hw0.ipynb
dlsyscourse/hw0/src/: simple_ml.py  simple_ml_ext.cpp
dlsyscourse/hw1/: Note.md  hw1.ipynb
dlsyscourse/hw1/apps/: simple_ml.py
dlsyscourse/hw1/python/needle/: autograd.py  ops.py
dlsyscourse/hw2/: hw2.ipynb
dlsyscourse/hw2/apps/: mlp_resnet.py
dlsyscourse/hw2/tests/: test_nn_and_optim.py
dlsyscourse/hw3/: hw3.ipynb
dlsyscourse/hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
mlc/exercise/: exercise2.ipynb
models/: .gitignore
models/cnn/: net.py  train.py
models/transformer/: decoder.py  encoder.py  multi_head_attention.py  train.py  transformer.py
models/transformer/blocks/: __init__.py  decoder_layer.py  encoder_layer.py
models/transformer/embedding/: __init__.py  positional_encoding.py  token_embedding.py  transformer_embedding.py
models/transformer/layers/: __init__.py  feed_forward.py  generator.py  multi_head_attention.py  sub_layer.py
(+7 files in other folders)
